Removed synchronized blocks from throttled pool, implemented thread collision detection instead.
git-svn-id: https://svn.apache.org/repos/asf/incubator/ibatis/trunk@152534 13f79535-47bb-0310-9956-ffa450edef68